--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.1.0
       with:
-        server: ftpupload.net
-        username: epiz_2748991
+        server: naamyaafoundation.org
+        username:   jetadmin@naamyaafoundation.org
         password: ${{ secrets.ftp_password }}
